add simple service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -232,6 +232,7 @@
     <app-todo-item></app-todo-item>
     <div class="right-side">
       <div class="pill-group">
+        <button (click)="add()">{{countService.count}}</button>
         @for (item of [
           { title: 'Explore the Docs', link: 'https://angular.dev' },
           { title: 'Learn with Tutorials', link: 'https://angular.dev/tutorials' },
