--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,7 +1,7 @@
 <!-- layout.component.html -->
 <div class="layout">
   <header>
-    <!-- Здесь может быть ваша шапка сайта -->
+    Тут шапка
   </header>
   <nav>
     <!-- Здесь может быть ваша навигация -->
@@ -11,6 +11,6 @@
     <ng-content></ng-content>
   </main>
   <footer>
-    <!-- Здесь может быть ваш футер -->
+   тут футер
   </footer>
 </div>
