Add new service

--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,16 +1,11 @@
-<!-- layout.component.html -->
 <div class="layout">
   <header>
-    Тут шапка
+    Header
   </header>
-  <nav>
-    <!-- Здесь может быть ваша навигация -->
-  </nav>
   <main>
-    <!-- Здесь будут отображаться дочерние компоненты -->
-    <ng-content></ng-content>
+    <ng-content />
   </main>
   <footer>
-   тут футер
+   footer
   </footer>
 </div>
