Add new components

--- a/src/app/features/profile/pages/profile/profile.component.html
+++ b/src/app/features/profile/pages/profile/profile.component.html
@@ -1,7 +1,3 @@
-<div *ngIf="isLoading">Loading...</div>
-
 <div *ngIf="!isLoading">
-  <p>ID: {{ userInfo?.id }}</p>
-  <p>Name: {{ userInfo?.name }}</p>
-  <p>Email: {{ userInfo?.email }}</p>
+  <app-user [id]="userInfo?.id" [name]="userInfo.name" [email]="userInfo.email"></app-user>
 </div>
